error in the indentity i created the videw for it and refused to do the scallfolding

--- a/StudentManagement/Areas/Identity/Pages/Account/Register.cshtml
+++ b/StudentManagement/Areas/Identity/Pages/Account/Register.cshtml
@@ -255,8 +255,9 @@
                            type="password"
                            id="Input_Password"
                            name="Input.Password" 
-                           placeholder="Create a password" 
-                           required>
+                           placeholder="Create a password" />
+                          
+                           req> 
                     <button type="button" class="password-toggle" onclick="togglePassword('Input_Password')">
                         <i class="fas fa-eye"></i>
                     </button>
