--- a/StudentManagement/Views/Home/Index.cshtml
+++ b/StudentManagement/Views/Home/Index.cshtml
@@ -1,9 +1,6 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Dashboard";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome to Student Portal</h1>
-    <p>Please <a href="/Identity/Account/Login">login</a> to continue.</p>
-    <p>Or <a href="/Identity/Account/Register">register</a>.</p>
-</div>
+<h2>Welcome</h2>
+<p>You are logged in.</p>
